# portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: sphinx.yml
source/: about_me.rst  conf.py  index.rst  publications.rst  references.bib  research.rst
